--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -16,6 +16,9 @@ ul{
   grid-template-columns: 2fr 10fr;
   /* grid-gap:10px; */
 }
-
+.app-wrapper-content{
+  grid-area: c;
+  background-color: cornflowerblue;
+}
 
 
