--- a/my-app/src/components/Navbar/Navbar.module.css
+++ b/my-app/src/components/Navbar/Navbar.module.css
@@ -1,4 +1,11 @@
 .nav{
     grid-area: n;
     background-color: burlywood;
-  }
+}
+.link{
+  text-decoration: none;
+  color:#fff;
+}
+.link_active{
+  color:red;
+}
