--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -12,14 +12,14 @@ ul{
     "h h h"
     "n c c"
   ;
-  grid-template-rows: 60px 1fr;
+  grid-template-rows: 50px 1fr;
   grid-template-columns: 2fr 10fr;
   /* grid-gap:10px; */
 }
 .app-wrapper-content{
   grid-area: c;
   background-color: cornflowerblue;
-  height: calc(100vh - 60px);
+  min-height: calc(100vh - 50px);
 }
 
 
